[gd_scene load_steps=18 format=3 uid="uid://b8drdvlieafiq"]

[ext_resource type="Script" path="res://battlesim/heroes/hero.gd" id="1_2aodq"]
[ext_resource type="Texture2D" uid="uid://dov0tkj3njqct" path="res://assets/art/characters/Eddy the Jungler.png" id="1_qj134"]
[ext_resource type="Script" path="res://battlesim/components/attack_component.gd" id="2_pd6d5"]
[ext_resource type="Script" path="res://battlesim/components/death_component.gd" id="3_rjyem"]
[ext_resource type="Script" path="res://battlesim/components/damage_numbers_component.gd" id="4_ankpb"]
[ext_resource type="Script" path="res://battlesim/components/flash_component.gd" id="5_uul06"]
[ext_resource type="Script" path="res://battlesim/components/hitbox_component.gd" id="6_rsfbi"]
[ext_resource type="Script" path="res://battlesim/components/hurt_box_component.gd" id="7_bpwuo"]
[ext_resource type="Script" path="res://battlesim/components/move_component.gd" id="8_qj5y5"]
[ext_resource type="Script" path="res://battlesim/components/navigation_component.gd" id="9_f2gqn"]
[ext_resource type="Script" path="res://battlesim/components/stats_component.gd" id="10_ehblq"]
[ext_resource type="Script" path="res://battlesim/components/state_machine_component.gd" id="11_2pcrj"]
[ext_resource type="Script" path="res://battlesim/states/pushing_state.gd" id="13_facl0"]
[ext_resource type="Script" path="res://battlesim/components/health_bar_component.gd" id="14_uvgsd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lxl74"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vyiwj"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qudmt"]
radius = 70.0

[node name="Hero" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_2aodq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.075, 0.075)
texture = ExtResource("1_qj134")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lxl74")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
navigation_layers = 7
path_postprocessing = 1

[node name="AttackComponent" type="Node" parent="." node_paths=PackedStringArray("hitbox_component", "stats_component")]
script = ExtResource("2_pd6d5")
hitbox_component = NodePath("../HitboxComponent")
stats_component = NodePath("../StatsComponent")

[node name="DeathComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component")]
script = ExtResource("3_rjyem")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")

[node name="DamageNumbersComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "hurtbox_Component")]
script = ExtResource("4_ankpb")
actor = NodePath("..")
hurtbox_Component = NodePath("../HurtboxComponent")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("hurtbox_component", "sprite")]
script = ExtResource("5_uul06")
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite2D")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("stats_component")]
script = ExtResource("7_bpwuo")
stats_component = NodePath("../StatsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_vyiwj")
debug_color = Color(0.964706, 0, 0, 0.419608)

[node name="HitboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("stats_component")]
script = ExtResource("6_rsfbi")
stats_component = NodePath("../StatsComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_qudmt")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "navigation_agent")]
script = ExtResource("8_qj5y5")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
navigation_agent = NodePath("../NavigationAgent2D")

[node name="NavigationComponent" type="Node" parent="." node_paths=PackedStringArray("navigation_agent")]
script = ExtResource("9_f2gqn")
navigation_agent = NodePath("../NavigationAgent2D")

[node name="StatsComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("10_ehblq")
actor = NodePath("..")

[node name="StateMachineComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "initial_state")]
script = ExtResource("11_2pcrj")
actor = NodePath("..")
initial_state = NodePath("PushingState")

[node name="PushingState" type="Node" parent="StateMachineComponent" node_paths=PackedStringArray("actor", "stats_component", "navigation_agent", "attack_component")]
script = ExtResource("13_facl0")
actor = NodePath("../..")
stats_component = NodePath("../../StatsComponent")
navigation_agent = NodePath("../../NavigationAgent2D")
attack_component = NodePath("../../AttackComponent")

[node name="HealthBarComponent" type="ProgressBar" parent="." node_paths=PackedStringArray("stats_component")]
offset_right = 4.0
offset_bottom = 22.0
script = ExtResource("14_uvgsd")
stats_component = NodePath("../StatsComponent")
